# fastsecret

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: appsettings.json  docker-compose.env
rules/: custom-rules.yaml
src/: lib.rs  main.rs  rules.rs  scanner.rs
src/cli/: index.ts
src/cli/commands/: gen.ts  migrate.ts
src/cli/utils/: logger.ts
src/config/: types.ts
src/core/migration/: executor.ts  loader.ts
src/core/schema/: differ.ts  parser.ts
tests/: scanner_test.rs
